--- a/yarrow.css
+++ b/yarrow.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,900&display=swap');
 @import "//christieclee.github.io/highalo/high/high.css";  
   .yarrow-wrapper{ 
@@ -530,9 +529,9 @@ font: 12px 'nunito', sans-serif;
 } 
 
 .yarrow-extras li:before { 
-content:'✶';
+content:' ✶ ';
 color: var(--hmain);
-margin:0px  3px;
+margin:0px 2px;
 } 
 
 .y-leftleaf { 
@@ -664,6 +663,928 @@ text-align: left;
   top:250px;
   left: 80px;
   z-index: 4;
+  padding: 10px 20px; 
+} 
+
+
+
+
+/*ships*/
+#y-reltitle { 
+  font-size: 22px;
+} 
+
+.y-rel2 {
+  position: absolute;
+right: -500px; 
+  top: 50px;
+ z-index: 8;
+ -webkit-transition: ease-in-out 0.5s;  
+   -ms-transition: ease-in-out 0.5s;  
+   -moz-transition: ease-in-out 0.5s;  
+   -o-transition: ease-in-out 0.5s;  
+    align-items: flex-start;
+    height: 300px;
+  width:350px; 
+  display: inline-flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  align-content: flex-start;
+
+} 
+
+
+.y-shipscroll::-webkit-scrollbar { width: 0px;  }
+.y-shipscroll::-webkit-scrollbar-track { background:; display: none; }
+.y-shipscroll::-webkit-scrollbar-thumb { background: ; border: 0; }
+
+.yarrow-rel { 
+  font-size: 11.7px;
+  background-color: var(--bg2);
+  padding: 10px; 
+  text-transform: uppercase; 
+  font-weight: 600;
+  color: var(--black);
+  border-radius: 5px;
+  overflow: hidden;
+  line-height: 10px;
+  margin:  5px ; 
+  height: 15px;
+  flex-grow: 1;
+  align-items: baseline;  
+   position: relative; 
+  z-index: 4;
+} 
+
+.y-shipscroll { 
+  height:245px;
+  width:350px; 
+  display: inline-flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  align-content: flex-start;
+  overflow-x: scroll;
+
+} 
+
+/*ship keys*/
+
+.y-ship-key { 
+  width:350px; 
+  top: 0px; 
+  font-size: 12.5px; 
+  margin-bottom: 20px; 
+  margin-left: -20px; 
+
+} 
+
+.y-shipscroll::after  { 
+    content: '';
+    background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/897348757794988062/23.png);
+    width: 70px;
+    position:absolute;
+    right:130px;
+    bottom: -60px;
+    height:130px;
+    background-size:80%;
+    background-position: 0px;
+     background-repeat:no-repeat;
+     opacity: 0.7;
+  transform: scaley(-1) rotate(95deg);
+    z-index: 2 ;
+} 
+.yarrow-key { 
+  margin-right: 5px;
+  padding: 5px; 
+    background-image: linear-gradient(to left, var(--background), var(--bg2));
+    border-radius: 5px; 
+    position: relative; 
+    z-index: 2;
+} 
+
+/*ship icons*/ 
+
+#love::before {
+  content: '\a97';
+   font-family: 'starry';
+  position: relative; ; 
+  font-size:17px;
+  top: 3px; 
+  color: var(--haccent);
+  margin-right: 5px;
+}
+
+#neg::before {
+  content: '\a91';
+    font-family: 'starry';
+  position: relative; ; 
+  font-size:17px;
+  top: 3px; 
+  color: var(--haccent);
+    margin-right: 5px;
+}
+
+#like::before {
+  content: '\a39';
+    font-family: 'starry';
+  position: relative; ; 
+  font-size:17px;
+  top: 3px; 
+  color: var(--haccent);
+    margin-right: 5px;
+}
+
+#hm {
+  content: '';
+  position: relative; 
+  font-size: 11.7px; 
+  line-height: 14px;
+}
+
+#fam::before {
+  content: '\a48';
+  font-family: 'starry';
+  position: relative; ; 
+  font-size:17px;
+  top: 3px; 
+  color: var(--haccent);
+    margin-right: 5px;
+}
+
+.yarrow-rel.npc {
+   filter: grayscale(1);
+   color: var(--grey);
+}
+
+/*chars*/
+  
+  #alec { 
+  --hmain: #9e6679; 
+--haccent: #8a9295;
+  --y-img:  url(https://cdn.discordapp.com/attachments/693249041240424470/802074216136179792/17.png);
+  --name: 'alecto v.';
+    
+  }   
+  
+    #darius { 
+--hmain: #b86837; 
+--haccent: #417b82;
+  --y-img:  url(https://cdn.discordapp.com/attachments/867661284391780392/867661330126340156/3.png);
+  --name: 'darius b.'
+    } 
+    
+     #darius .yarrow-image {
+    background-size:120%; 
+    background-position: 0px -10px;
+  } 
+    
+    
+#dom { 
+--hmain: #5E6E82; 
+--haccent: #a1888a;
+ --y-img:  url(https://cdn.discordapp.com/attachments/385174823975780363/385174906222149632/3.png);
+  --name: 'dominic h.';
+} 
+
+  #lissy {
+--hmain: #8a9377;
+--haccent: #dc9d81;
+ --y-img:  url(https://cdn.discordapp.com/attachments/853744380828581918/882328978843631646/13.png);
+  --name: 'felicity b.';
+    
+  } 
+
+
+  #leon { 
+--hmain: #8f3d41; 
+--haccent: #738895;
+ --y-img:  url(https://cdn.discordapp.com/attachments/378633932754780170/823329209090703360/thesu4.png);
+  --name: 'leon b.';  
+    
+  } 
+
+
+#marko { 
+--hmain: #D28158;
+--haccent: #89b9b1;
+ --y-img:  url(https://cdn.discordapp.com/attachments/502675404214108166/767861560252825640/35.png);
+  --name: 'marko j.';
+  
+} 
+  
+ #paris { 
+--hmain: #723c54;
+--haccent: #a5a3b8;
+ --y-img:  url(https://cdn.discordapp.com/attachments/378633932754780170/812176417567277106/paris2021.png);
+ --name: 'paris k.';
+   
+   
+ } 
+ #paris .yarrow-image {
+    background-size: 97%; 
+    background-position: -10px -20px;
+  } 
+  
+  #rhys {
+--hmain: #7091a9;
+--haccent: #59755f;
+ --y-img:  url(https://cdn.discordapp.com/attachments/824527081806364722/851947599439331378/6.png);
+  --name: 'rhys p.';
+  
+} 
+
+ #rhys .yarrow-image {
+    background-size: 140%; 
+    background-position: -10px -30px;
+  } 
+
+
+#rook{ 
+--hmain: #7a9785;
+--haccent: #8a7189;
+ --y-img:  url(https://cdn.discordapp.com/attachments/455967033675350017/877263627923636285/11.png);
+  --name: 'rook m.';
+  
+} 
+
+ #yusuf { 
+ --hmain: #b75e4e; 
+--haccent: #da9b63;
+ --y-img:  url(https://cdn.discordapp.com/attachments/378633932754780170/877052284972961874/yusuf1.png);
+  --name: 'yusuf a.';
+   
+ } 
+
+ #yusuf .yarrow-image {
+    background-size: 100%; 
+    background-position: 5px 0px;
+  } 
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,900&display=swap');
+@import "//christieclee.github.io/highalo/high/high.css";  
+  .yarrow-wrapper{ 
+  --background: #f2f2f2;
+      --bg2: #e3e3e3;
+    --white: #efefef;
+    --whitet: #efefef6B;
+    --grey: #bebebe;
+    --black: #505050;
+    position: relative;  
+    width: 530px;
+    height: 600px; 
+    background-color: var(--background);
+    color: var(--black);
+    margin:30px auto 15px;
+    -webkit-text-size-adjust: none;
+    line-height:45px;
+    border-radius: 10px 10px 0px 0px;
+    border-bottom: 20px solid var(--haccent); 
+  } 
+  .yarrow-wrapper a { 
+   text-decoration: none;
+
+    } 
+  .yarrow-wrapper b { 
+      color: var(--haccent);
+    } 
+    
+    
+
+    
+ /*toggled divs*/
+  
+
+.ytoggle-wrap input[type=checkbox] { display: none;}
+
+/*toggle main divs*/
+ 
+
+.yarrow-content input[type=checkbox]:checked ~ .yarrow-toggle { 
+  top: 0px;
+  right: 0px;
+  z-index: 10; 
+  opacity: 1;
+ -webkit-transition: ease-in-out 0.5s;  
+   -ms-transition: ease-in-out 0.5s;  
+   -moz-transition: ease-in-out 0.5s;  
+   -o-transition: ease-in-out 0.5s;
+  }
+  
+.yarrow-content   input[type=checkbox]:checked ~ .yarrow-timeline { 
+  top:0px;
+  left:-700px;
+  z-index: 10; 
+  opacity: 1;
+ -webkit-transition: ease-in-out 0.5s;  
+   -ms-transition: ease-in-out 0.5s;  
+   -moz-transition: ease-in-out 0.5s;  
+   -o-transition: ease-in-out 0.5s;  
+  }
+
+
+/*toggle extras and ships*/
+
+.y-chartoggle input[type=checkbox]:checked ~ .y-rel2 { 
+
+  top: 50px;
+right:65px; 
+  z-index: 10; 
+  opacity: 1;
+ -webkit-transition: ease-in-out 0.5s;  
+   -ms-transition: ease-in-out 0.5s;  
+   -moz-transition: ease-in-out 0.5s;  
+   -o-transition: ease-in-out 0.5s;  
+  }
+
+
+
+.y-chartoggle input[type=checkbox]:checked ~ .yarrow-extras { 
+  top: -500px;
+  z-index: 10; 
+  opacity: 1;
+ -webkit-transition: ease-in-out 0.5s;  
+   -ms-transition: ease-in-out 0.5s;  
+   -moz-transition: ease-in-out 0.5s;  
+   -o-transition: ease-in-out 0.5s;  
+  }
+
+    
+    
+/*top bar*/    
+
+
+  .yarrow-top { 
+    height: 130px; 
+    background: var(--hmain);
+    border-radius: 10px 10px 0px 0px;
+    font-family: 'Playfair Display', serif;
+    position: relative; 
+    z-index: 8;
+  } 
+  
+  .yarrow-image { 
+    border-radius: 100%;
+    width: 135px; 
+    height: 135px; 
+    background-image: var(--y-img);
+    position: absolute; 
+    top: -10px;
+    left: 10px; 
+    background-size: 105%; 
+    background-position: 0px -20px;
+    z-index: 4;
+  } 
+  
+  .yarrow-frame { 
+    position: absolute;
+   background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894848959808421888/frame.png);
+background-size: 80%;
+  height:250px; 
+   width: 250px; 
+   background-position:0px 10px;
+   top: -55px;
+   left: -25px;
+  transform: scaley(-1);
+     background-repeat:no-repeat;
+     z-index: 3;
+  } 
+  
+  .yarrow-frametop { 
+  position: absolute;
+   background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894852657754308618/frame-top.png);
+background-size: 43%;
+  height:200px; 
+   width: 200px; 
+   background-position:0px 0px;
+   top: -10px;
+   left:-30px;
+     background-repeat:no-repeat;
+     z-index: 4;
+    transform: rotate(30deg);
+  } 
+  
+  .yarrow-name{
+    position: absolute; 
+    color: var(--white);
+    font-size: 37px; 
+    left:170px;
+    top:27px;
+    text-transform: uppercase;
+    font-style: italic;
+    border-right: none;
+    letter-spacing: 2px;
+    z-index: 6;
+    text-shadow: 1px 1px var(--haccent);
+    width: 300px;
+    height: 80px; 
+    text-align: left; 
+  } 
+  
+  .yarrow-name::before { 
+    content: var(--name);
+    position: absolute;
+    z-index: 3;
+    line-height: 30px !important;
+  } 
+  
+  .yarrow-tracker { 
+    font:12px 'Nunito', sans-serif;
+    text-shadow: 1px 1px var(--black);
+    font-weight: 400;
+    margin-left:40px;
+  position: relative; 
+  top: 32px;
+    letter-spacing: 1px;
+   background: var(--hmain);
+  padding: 0px 10px 5px 0px;
+    line-height: 15px !important;
+  width: 140px;
+  } 
+  
+  .yarrow-count { 
+    font:14px 'Nunito', sans-serif;
+    text-transform: lowercase;
+      font-style: normal;
+      position: absolute; 
+      bottom: 20px;
+      right:30px; 
+      color: var(--white);
+    border: 1px solid var(--haccent);
+    padding: 10px 20px;
+    letter-spacing: 2px;
+    border-radius: 5px;
+  } 
+  
+  .y-num { 
+  text-shadow: 2px 2px var(--haccent);
+font-weight: 600;
+    font-style: italic;
+  } 
+  
+ .y-leaves { 
+   position: absolute;
+    background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894460989330829322/17.png);
+background-size: 45%;
+    background-position: 0px;
+   height: 100px; 
+   width: 90px; 
+   top: -40px; 
+   right: -33px; 
+   background-repeat:no-repeat;
+   z-index:5;
+
+float: right; 
+transform: rotate(-60deg);
+  } 
+
+  
+
+  
+  /*timeline*/
+  
+.yarrow-content { 
+  overflow: hidden; 
+    width: 530px;
+    height: 470px; 
+   position: relative; 
+   z-index: 7;
+
+  }
+
+
+  .yarrow-timeline { 
+ border: 4px double var(--grey);
+ margin: 20px; 
+ width:480px;
+ height:420px;
+ position: absolute; 
+ overflow-y: scroll; 
+  overflow-x:hidden;
+  z-index: 6;
+  top: 0px;
+  left:0px;
+
+  -webkit-transition: ease-in 0.6s;  
+   -ms-transition: ease-in 0.6s;  
+   -moz-transition: ease-in 0.6s;  
+   -o-transition: ease-in 0.6s;  
+  } 
+  
+  .yarrow-timeline::-webkit-scrollbar { width: 0px;  }
+ .yarrow-timeline::-webkit-scrollbar-track { background:; display: none; }
+ .yarrow-timeline::-webkit-scrollbar-thumb { background: ; border: 0; }
+  
+  .yarrow-season { 
+  font: 30px 'Playfair Display', serif;
+   font-weight: 700; 
+  text-transform: uppercase;
+  position: sticky;
+  width: 100%;
+  color: var(--hmain);
+  top: 0px;
+  padding: 30px 20px 0px 0px;
+z-index: 4;
+text-align: right; 
+float: right; 
+    font-style: italic;
+    background: var(--background);
+    line-height: 0px !important;
+margin-top:0px;
+height: 45px;
+  } 
+  
+.y-season { 
+  position: relative;
+  text-shadow: 2px 2px var(--grey);
+  z-index: 4; 
+} 
+
+  .yarrow-month { 
+  font: 21px 'Playfair Display', serif;
+   font-weight: 700; 
+  text-transform: uppercase;
+  position: sticky;
+  color: var(--haccent);
+  top:45px;
+  padding: 10px 5px 15px 0px;
+  border-radius: 5px;
+z-index: 5;
+background: var(--background);
+float: right; 
+width: 130px; 
+margin-right: 20px; 
+margin-top: -30px;
+text-align: right; 
+line-height: 0px!important;
+  background-image: linear-gradient(to right, var(--background), var(--bg2));
+
+  } 
+  
+.y-month { 
+  position: relative;
+  text-shadow: 1px 1px var(--grey);
+  z-index:5; 
+}
+  
+  /*month seasons*/  
+   #summer::before { 
+    content: '';
+    background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894479299975991327/8.png);
+    width: 70px;
+    position:absolute;
+    right: 155px;
+    top: -35px;
+    height:120px;
+    background-size:80%;
+    background-position: 0px;
+     background-repeat:no-repeat;
+     opacity: 0.4;
+     transform: rotate(-90deg);
+
+    } 
+    
+   #fall::before { 
+    content: '';
+    background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894776799186255902/leavesred.png);
+    width: 70px;
+    position:absolute;
+    right: 140px;
+    top: -40px;
+    height:120px;
+    background-size:80%;
+    background-position: 0px;
+     background-repeat:no-repeat;
+     opacity: 0.4;
+    transform: rotate(-90deg);
+
+    } 
+    
+     #winter::before { 
+    content: '';
+    background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894843565614694410/winter.png);
+    width: 70px;
+    position:absolute;
+    right: 150px;
+    top:-10px;
+    height:120px;
+    background-size:130%;
+    background-position: 0px;
+     background-repeat:no-repeat;
+     opacity: 0.4;
+    transform: rotate(-40deg);
+    } 
+    
+   #spring::before { 
+    content: '';
+    background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894844851261165578/spring.png);
+    width: 70px;
+    position:absolute;
+    right: 170px;
+    top: -25px;
+    height:120px;
+    background-size:118%;
+    background-position: 0px;
+     background-repeat:no-repeat;
+     opacity: 0.4;
+    transform: rotate(-100deg);
+
+    } 
+    
+    #past::before { 
+    content: '';
+    background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894460945936560129/20.png);
+    width: 70px;
+    position:absolute;
+    right: 90px;
+    top: -45px;
+    height:120px;
+    background-size:68%;
+    background-position: 0px;
+     background-repeat:no-repeat;
+     opacity: 0.4;
+    transform: rotate(-80deg);
+
+    } 
+
+
+/*threads*/
+    
+#closed { 
+   filter: grayscale(1);
+   color: var(--grey);
+   opacity: 0.7;
+} 
+
+    
+.yarrow-threads { 
+  text-align: left;
+  width: 410px;
+  list-style: none;
+  counter-reset: code-counter;
+  font:12px 'Nunito', sans-serif;
+display: inline-block;
+z-index: 2;
+margin: 15px 0px 15px;
+
+  } 
+  
+    
+.yarrow-threads li { 
+height: auto;
+position: relative;
+padding: 15px 0px;
+margin-left: 40px; 
+z-index: 2;
+} 
+
+.yarrow-threads li::before { 
+   content: '' counter(code-counter, decimal-leading-zero);
+  counter-increment: code-counter;
+  font: 17px 'Playfair Display', serif;
+   color: var(--haccent);
+   font-weight: 600;
+   margin-right:-2px;
+   background: var(--background);
+    position: absolute; 
+    z-index: 4; 
+    text-shadow: 1px 1px var(--grey);
+    top: 0px; 
+    padding-right: 10px;
+}
+
+.yarrow-threads li::after{
+    content: ''; 
+   
+}
+  
+.yarrow-threads a { 
+  text-transform: uppercase;
+  color: var(--hmain);
+  font: 16px 'Playfair display', serif;
+  letter-spacing: 0.5px;
+  font-weight: 900;
+  padding-left:5px;
+  text-shadow: 1px 1px var(--grey);
+}   
+
+.thread-link { 
+    background: var(--background);
+    position: absolute; 
+    z-index: 4; 
+    padding-right: 5px; 
+    top: 2px; 
+    left:23px;
+    border-radius: 5px; 
+} 
+
+.thread-info { 
+  border: 1px solid var(--haccent);
+  display: inline-flex; 
+  flex-wrap: wrap;
+  left:0px;
+  padding: 10px 20px 10px 15px;
+  border-radius: 5px;
+  background: var(--background);
+  margin-right: 0px;
+  line-height: 15px;
+  position: relative; 
+  font-size: 13px;
+text-transform: lowercase;
+} 
+
+
+.thread-info u { 
+  text-decoration: none; 
+  margin-left: 10px;
+
+} 
+
+.thread-info u::before { 
+ content: '#'; 
+ color: var(--hmain);
+   font-weight: 600;
+ 
+}
+
+
+
+/*char extra*/
+.yarrow-toggle { 
+ width:480px;
+ height:420px;
+ margin: 20px; 
+ border: 4px double var(--grey);
+background: var(--background);
+overflow: hidden;
+list-style: none;
+color: var(--black);
+font: 12px 'nunito', sans-serif; 
+  text-transform: lowercase;
+  position: relative; 
+  top:-600px;
+  left: 0px; 
+  z-index: 8; 
+  -webkit-transition: ease-in-out 0.5s;  
+   -ms-transition: ease-in-out 0.5s;  
+   -moz-transition: ease-in-out 0.5s;  
+   -o-transition: ease-in-out 0.5s;  
+}
+
+.yarrow-extras { 
+   width:450px;
+ height:370px;
+ padding: 20px;
+ position: absolute; 
+ top: 0px;
+ left: 0px; 
+  -webkit-transition: ease-in-out 0.5s;  
+   -ms-transition: ease-in-out 0.5s;  
+   -moz-transition: ease-in-out 0.5s;  
+   -o-transition: ease-in-out 0.5s;  
+} 
+
+.yarrow-extras li { 
+  display: inline-flex;
+ flex-grow:1;
+  flex-wrap: wrap;
+  justify-content:flex-start;
+} 
+
+.yarrow-extras li:before { 
+content:' ✶ ';
+color: var(--hmain);
+margin:0px 2px;
+} 
+
+.y-leftleaf { 
+  background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894460989330829322/17.png);
+  width: 100px; 
+  height: 150px;
+  position: absolute;
+  left: -25px; 
+  top: 250px; 
+  background-size:80%;
+  background-repeat: no-repeat;
+  transform: rotate(20deg);
+    z-index: 5;
+} 
+
+.y-rightleaf { 
+  background-image: url(https://cdn.discordapp.com/attachments/894460498064601108/894460945936560129/20.png);
+  width: 100px; 
+  height: 150px;
+  position: absolute;
+  right: -40px; 
+  top: 20px; 
+  background-size:80%;
+  background-repeat: no-repeat;
+    transform: rotate(-20deg);
+    z-index: 5;
+} 
+
+
+.y-title { 
+ font: 25px 'Playfair Display', serif;
+ font-weight: 900;
+ color: var(--hmain);
+ text-shadow: 1px 1px var(--grey);
+ position: absolute;
+ text-transform: uppercase;
+} 
+
+.y-info { 
+  position: absolute;
+  padding: 15px;
+  border-radius: 5px; 
+  background-color: var(--bg2) ;
+  font-size: 14px;
+  overflow:hidden;
+  text-align:justify;
+  line-height: 19px;
+
+} 
+
+.y-info-scroll { 
+    overflow-y: scroll; 
+  overflow-x:hidden;
+    text-align:justify;
+    width: 205px; 
+    left: 5px ;
+
+} 
+
+.y-info li { 
+    display: inline;
+    text-align: justify;
+    
+} 
+
+
+.y-info-scroll::-webkit-scrollbar { width: 0px;  }
+.y-info-scroll::-webkit-scrollbar-track { background:; display: none; }
+.y-info-scroll::-webkit-scrollbar-thumb { background: ; border: 0; }
+
+
+.y-title#y-title1 { 
+   left:80px;
+ top: 10px;
+ z-index: 3;
+} 
+
+
+.y-info#y-info1 { 
+  width:200px; 
+  height: 150px;
+  top: 35px;
+  left: 25px;
+} 
+
+.y-info-scroll#y-scroll1 { 
+ width:200px; 
+  height: 150px;
+} 
+
+.y-title#y-title2 { 
+ right:110px;
+ top: 45px;
+ z-index: 3;
+} 
+
+
+ .y-info#y-info2{ 
+  width:140px; 
+  height: 130px;
+  top: 70px;
+  right:45px;
+  
+} 
+
+.y-info-scroll#y-scroll2 { 
+    height:125px;
+width: 130px;
+text-align: left;
+
+} 
+
+.y-info2 li { 
+    display: block;
+} 
+
+.y-title#y-title3 { 
+ position: absolute; 
+ left:55px;
+ top:225px;
+ text-transform: uppercase;
+ z-index: 5;
+} 
+
+
+ .y-info#y-info3 { 
+  width:310px; 
+  height: 100px;
+  top:250px;
+  left: 80px;
+  z-index: 4;
+  padding: 10px 20px; 
 } 
 
 
