--- a/yarrow.css
+++ b/yarrow.css
@@ -798,7 +798,7 @@ right: -500px;
   content: '';
   position: relative; 
   font-size: 11.7px; 
-  line-height: 14px;
+  line-height: 18px !important;
 }
 
 #fam::before {
