--- a/bramble.css
+++ b/bramble.css
@@ -1,5 +1,5 @@
 @import "//christieclee.github.io/highalo/high/high.css";  
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;0,600;1,500;1,600&display=swap');
     .bramble-wrapper { 
     --white: #ffffff;
     --shadow: #bbbbbb;
@@ -22,9 +22,16 @@
     .bramble-wrapper b { 
       color: var(--hmain);
     } 
+    
+    .bramble-wrapper u { 
+     font-style: italic;
+     text-decoration: none;
+     color: var(--haccent);
+     border-bottom: 1px solid var(--hmain);
+    } 
 
 .bramble-date { 
-  font:12px 'Spartan', sans-serif; 
+  font:14px 'Open Sans', sans-serif; 
   color: var(--hmain);
   letter-spacing: 1px; 
   position: absolute; 
@@ -32,7 +39,8 @@
   top: 40px; 
   text-align: left;
   line-height: 0px;
-     font-weight: 500;
+     font-weight: 600;
+
 } 
 
 .bramble-date::after { 
@@ -95,20 +103,22 @@ display: flex;
 } 
 
 .bramble-tag { 
-   font: 11px 'Spartan', sans-serif;
+   font: 11px 'Open Sans', sans-serif;
   text-align: right;
    color: var(--black);
    width: 300px; 
    position: relative;
 left: 110px;  
 top: 10px;
+
 } 
  .bramble-tag a { 
-      font: 10px 'Spartan', sans-serif;
+      font: 11px 'Open Sans', sans-serif;
       text-decoration: none;
       color: var(--hmain);
       text-transform: uppercase;
-        font-weight: 500;
+        font-weight: 600;
+        
     } 
     
     .bramble-tag a:before { 
@@ -116,6 +126,7 @@ top: 10px;
       color: var(--haccent);
       margin-right: 2px;
     } 
+
 
 #high { 
   --hmain: #767793; 
