--- a/bingo-filled.css
+++ b/bingo-filled.css
@@ -12,7 +12,7 @@ width:100px;
 height:100px;
 border-radius:100%;
 opacity:0.5;
-color: var(--main);
+color: var(--group1);
 transform: rotate(0deg);
 
 }
