--- a/bingo-filled.css
+++ b/bingo-filled.css
@@ -1,5 +1,129 @@
+
+
+/* BODY & TOP */
+
+
+
+.bingo-container {
+font-family: nunito;
+position:relative;
+overflow: hidden;
+margin:25px auto;
+width:550px;
+height:575px;
+background:var(--light);
+background: linear-gradient(var(--group2-rgb) -25%, var(--group1-rgb));
+color:var(--dark);
+font-size:12px;
+border-radius: px;
+line-height:17px;
+box-shadow:2px 2px 2px #d3d3d3;
+text-align:left;
+
+}
+
+.bingo-name {
+z-index:1;
+padding:20px 25px;
+line-height:45px;
+font-size:40px;
+font-weight:200;
+color:var(--white);
+text-transform: uppercase;
+width:500px;
+position:relative;
+text-align:left;
+
+}
+
+.bingo-name .bingo-word { 
+  font-size: 50px;
+color: var(--main);
+background-image: linear-gradient(var(--group2), var(--group1-rgb));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+font-weight: 700; 
+
+} 
+
+.bingo-name .bing { 
+  color: var(--white);
+  position: absolute; 
+  right: -5px; 
+  font-size: 140px; 
+  top: -5px; 
+  opacity: 0.5; 
+  transform: rotate(-40deg);
+} 
+
+.bingo-table {
+position:relative;
+z-index:1;
+margin:-20px 25px 25px;
+background: transparent;
+}
+
+.prompt, .filled {
+position:relative;
+background-image: linear-gradient(var(--white) -25%, var(--white-rgb));
+border-radius:5px;
+width:130px;
+height:135px;
+padding:0px 15px;
+text-align:center;
+font-size:20px;
+line-height:22px;
+text-transform:lowercase;
+color:var(--dark-rgb);
+}
+
+
+   
 .filled:before {
 content:'\a39';
 font-family: starry; 
+position:absolute;
+top:30px;
+left: 10px; 
+font-size: 80px;
+z-index:3;
+margin:25px 10px;
+display:block;
+width:100px;
+height:100px;
+border-radius:100%;
+opacity:0.5;
+color: var(--group1);
+transform: rotate(0deg);
+} 
+
+.filled:before {
+  content:'\a39';
+font-family: starry; 
+position:absolute;
+top:30px;
+left: 10px; 
+font-size: 80px;
+z-index:3;
+margin:25px 10px;
+display:block;
+width:100px;
+height:100px;
+border-radius:100%;
+opacity:0.5;
+color: var(--group1);
+transform: rotate(0deg);
 
 }
+
+.prompt a, .filled a {
+z-index:4;
+display:block;
+width:150px;
+height:150px;
+position:absolute;
+top:0px; left:0px;
+}
+
