--- a/bingo-filled.css
+++ b/bingo-filled.css
@@ -100,11 +100,11 @@ transform: rotate(0deg);
 } 
 
 .filled:before {
-  content:'\a39';
+content:'\a92';
 font-family: starry; 
 position:absolute;
-top:30px;
-left: 10px; 
+top:25px;
+left: 20px; 
 font-size: 80px;
 z-index:3;
 margin:25px 10px;
@@ -113,8 +113,9 @@ width:100px;
 height:100px;
 border-radius:100%;
 opacity:0.5;
-color: var(--group1);
-transform: rotate(0deg);
+color: var(--main);
+transform: rotate(-10deg);
+text-shadow: -1px -1px 0 var(--white), 1px -1px 0 var(--white), -1px 1px 0 var(--white), 1px 1px 0 var(--white);
 
 }
 
