--- a/yarrow.css
+++ b/yarrow.css
@@ -921,8 +921,8 @@ right: -500px;
   } 
 
 #june { 
---hmain: #908f7d;
---haccent: #bbaea9;
+--hmain: #9fb2b2;
+--haccent: #bb9999;
  --y-img:  url(https://cdn.discordapp.com/attachments/941232609378316318/941232694518480916/7.png);
   --name: 'june l.';
 } 
