--- a/yarrow.css
+++ b/yarrow.css
@@ -922,7 +922,7 @@ right: -500px;
 
 #june { 
 --hmain: #9fb2b2;
---haccent: #bb9999;
+--haccent: #b08b8b;
  --y-img:  url(https://cdn.discordapp.com/attachments/941232609378316318/941232694518480916/7.png);
   --name: 'june l.';
 } 
