--- a/dogwood.css
+++ b/dogwood.css
@@ -19,7 +19,8 @@
 } 
 
 .dogwood-wrapper i { 
-    font-weight: 700;
+    font-weight: 600;
+    color: rgba(var(--black), 0.5);
 } 
 
 .dogwood-top { 
