--- a/dogwood.css
+++ b/dogwood.css
@@ -182,9 +182,8 @@ right: 10px;
 
 
  #ya { 
- --hmain: 183, 65, 45; 
---haccent:218, 155, 99;
-
+  --hmain:192, 125, 142;}     
+ --haccent: 74, 104, 80;
 } 
 
   #fb {
